Add header layout and styling to homepage
Introduced a new CSS file for body and header styling, added a logo image, and updated index.html to include a styled header with logo and search input. These changes improve the visual structure and user interface of the homepage.

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,7 +1,22 @@
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="css/body.css">
+    </head>
     <body>
-        <header></header>
-        <main></main>
+        <header class="header">
+            <img class="title" src="images/logo.png" alt="">
+            <input type="search" name="data-search" id="data-search-console">
+        </header>
+        <main>
+            <h1>これ奢って</h1>
+            <div class="contentsTop">
+                <div>
+                    <h1>アマゾン.co.jp</h1>
+                </div>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
